# loonix-tunes-windows

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  convert-icon.ps1  git-lfs.exe.stackdump  qtquickcontrols2.conf  sh.exe.stackdump  uname.exe.stackdump
.github/workflows/: release.yml
packaging/: deploy.ps1  loonix-tunes-setup.iss  resource.rc
packaging/windows/: deploy.ps1  loonix-tunes-setup.iss
packaging/windows/libs/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  libfftw3-3.lib  libfftw3f-3.lib  libfftw3l-3.lib  samplerate.lib  sndfile.lib  swresample.lib  swscale.lib
qml/: Ui.qml  qml.qrc
qml/ui/: Dsp.qml  Playlist.qml  qmldir
qml/ui/components/: AppShortcuts.qml  RenameDialog.qml
qml/ui/contextmenu/: AppearanceContextMenu.qml  PlaylistContextMenu.qml  TabContextMenu.qml
qml/ui/playlist/: Playlist.qml
qml/ui/pref/: PrefAppearance.qml  PrefButton.qml  PrefCollapsibleSection.qml  PrefShortcuts.qml  PrefTab.qml  PrefThemeEditor.qml
qml/ui/tabs/: Tab.qml  TabCustom.qml  TabFavorites.qml  TabQueue.qml
src/: main.rs
src/audio/: config.rs  mod.rs  samplerate.rs
src/audio/dsp/: bassbooster.rs  biquad.rs  chain.rs  compressor.rs  crossfeed.rs  crystalizer.rs  eq.rs  eqpreamp.rs  limiter.rs  middleclarity.rs  mod.rs  monostereo.rs  normalizer.rs  pitchshifter.rs  preamp.rs  rack.rs  reverb.rs  rubberbandffi.rs  stereoenhance.rs  stereowidth.rs  surround.rs
src/audio/engine/: abloop.rs  clock.rs  engine.rs  mod.rs  scheduler.rs  seek.rs
src/core/: mod.rs
src/ui/: mod.rs  reportbug.rs  updater.rs
(+23 files in other folders)
